[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantcalendar"
version = "1.0"
authors = [
    {name = "lzq", email = 'justgotpaid88@qq.com'}
]
description = "trade calendar"
requires-python = ">=3.9"
dependencies = [ "quantdata" ]

[project.optional-dependencies]
update = [
    "pandas",
    # "exchange_calendars==4.5.6", # 暂时没用
    "tushare",
    "tqsdk",
    "chinesecalendar==1.9.2", # 每年要更新
]

[tool.setuptools]
packages = ["quantcalendar", "quantcalendar.tools"]
